Fixed 2 bugs: 1. Long words in title not wrapping 2. Tags in quick-facts window did not have a margin between when on multiple lines

--- a/site/web/app/themes/lustrum-virgiel-xxiv/resources/assets/styles/layouts/_posts.scss
+++ b/site/web/app/themes/lustrum-virgiel-xxiv/resources/assets/styles/layouts/_posts.scss
@@ -33,8 +33,8 @@
       flex-direction: column;
     }
 
-    .tag:not(:last-child) {
-      margin-right: 0.25rem;
+    .tag {
+      margin: 0 0.25rem 0.25rem 0;
     }
   }
 }
